refactor user handling
