# components/backend/src/main/java/bme/restaurant/api/PasswordResetApi.java
@@ -33,38 +33,39 @@ import jakarta.annotation.Generated;
 
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-11-23T00:54:23.413633600+01:00[Europe/Budapest]")
 @Validated
-@Tag(name = "customer", description = "the customer API")
-public interface InvoiceApi {
+@Tag(name = "user", description = "the user API")
+public interface PasswordResetApi {
 
     default Optional<NativeWebRequest> getRequest() {
         return Optional.empty();
     }
 
     /**
-     * GET /invoice/{orderId} : Get an invoice in PDF format by orderId
+     * PATCH /password-reset : User login
      *
-     * @param orderId ID of the order for which to generate an invoice (required)
-     * @return Invoice PDF (status code 200)
-     *         or Order not found (status code 404)
+     * @param oldPassword  (required)
+     * @param newPassword  (required)
+     * @return User successfully logged in (status code 200)
+     *         or Unauthorized (status code 401)
+     *         or Invalid request (status code 400)
      */
     @Operation(
-        operationId = "getInvoice",
-        summary = "Get an invoice in PDF format by orderId",
-        tags = { "customer" },
+        operationId = "passwordReset",
+        summary = "User login",
+        tags = { "user" },
         responses = {
-            @ApiResponse(responseCode = "200", description = "Invoice PDF", content = {
-                @Content(mediaType = "application/pdf", schema = @Schema(implementation = org.springframework.core.io.Resource.class))
-            }),
-            @ApiResponse(responseCode = "404", description = "Order not found")
+            @ApiResponse(responseCode = "200", description = "User successfully logged in"),
+            @ApiResponse(responseCode = "401", description = "Unauthorized"),
+            @ApiResponse(responseCode = "400", description = "Invalid request")
         }
     )
     @RequestMapping(
-        method = RequestMethod.GET,
-        value = "/invoice/{orderId}",
-        produces = { "application/pdf" }
+        method = RequestMethod.PATCH,
+        value = "/password-reset"
     )
-    default ResponseEntity<org.springframework.core.io.Resource> getInvoice(
-        @Parameter(name = "orderId", description = "ID of the order for which to generate an invoice", required = true, in = ParameterIn.PATH) @PathVariable("orderId") String orderId
+    default ResponseEntity<Void> passwordReset(
+        @NotNull @Parameter(name = "oldPassword", description = "", required = true, in = ParameterIn.HEADER) @RequestHeader(value = "oldPassword", required = true) String oldPassword,
+        @NotNull @Parameter(name = "newPassword", description = "", required = true, in = ParameterIn.HEADER) @RequestHeader(value = "newPassword", required = true) String newPassword
     ) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
 
